syntax = "proto3";

                 package clreDedVlutPdl;
service ClreDedVlutPdlService {
 rpc createClreDedVlutPdl (ClreDedVlutPdlCreateInput) returns (ClreDedVlutPdl) {}
rpc clreDedVlutPdls (findManyParams) returns (stream ClreDedVlutPdl) {}
rpc clreDedVlutPdl (ClreDedVlutPdlWhereUniqueInput) returns (ClreDedVlutPdl) {}
rpc updateClreDedVlutPdl (ClreDedVlutPdlUpdateInput) returns (ClreDedVlutPdl) {}
rpc deleteClreDedVlutPdl (ClreDedVlutPdlWhereUniqueInput) returns (ClreDedVlutPdl) {} 
 }
message ClreDedVlutPdlCreateInput {
string createdAt = 1;
string delYn = 2;
string frstRegstId = 3;
string frstRgsrDttm = 4;
string id = 5;
string lastChgDttm = 6;
string lastChprId = 7;
int32 mdfyDgcnt = 8;
int32 pdlsCachAmt = 9;
string pdlsCachCurrCd = 10;
int32 pdlsCachFxrt = 11;
int32 pdlsCachNcyAmt = 12;
int32 pdlsDdctAmt = 13;
string pdlsDdctCurrCd = 14;
int32 pdlsDdctFxrt = 15;
int32 pdlsDdctNcyAmt = 16;
int32 pdlsInfeeAmt = 17;
string pdlsInfeeCurrCd = 18;
int32 pdlsInfeeFxrt = 19;
int32 pdlsInfeeNcyAmt = 20;
int32 pdlsInvcAmt = 21;
string pdlsInvcCurrCd = 22;
int32 pdlsInvcFxrt = 23;
int32 pdlsInvcNcyAmt = 24;
int32 pdlsInvcUsdAmt = 25;
int32 pdlsMprcBaseVal = 26;
string pdlsMprcCurrCd = 27;
int32 pdlsMprcNcyAmt = 28;
string pdlsMprcTpCd = 29;
int32 pdlsMprcUsdAmt = 30;
int32 pdlsMprcUtAmt = 31;
string pdlsNo = 32;
int32 pdlsOtcstAmt = 33;
string pdlsOtcstCurrCd = 34;
int32 pdlsOtcstFxrt = 35;
int32 pdlsOtcstNcyAmt = 36;
int32 pdlsTxbsNcyAmt = 37;
int32 pdlsTxbsUsdAmt = 38;
int32 pdlsVlutNcyAmt = 39;
int32 pdlsVlutUsdAmt = 40;
string reffNo = 41;
string updatedAt = 42;
};
message ClreDedVlutPdl {
string createdAt = 1;
string delYn = 2;
string frstRegstId = 3;
string frstRgsrDttm = 4;
string id = 5;
string lastChgDttm = 6;
string lastChprId = 7;
int32 mdfyDgcnt = 8;
int32 pdlsCachAmt = 9;
string pdlsCachCurrCd = 10;
int32 pdlsCachFxrt = 11;
int32 pdlsCachNcyAmt = 12;
int32 pdlsDdctAmt = 13;
string pdlsDdctCurrCd = 14;
int32 pdlsDdctFxrt = 15;
int32 pdlsDdctNcyAmt = 16;
int32 pdlsInfeeAmt = 17;
string pdlsInfeeCurrCd = 18;
int32 pdlsInfeeFxrt = 19;
int32 pdlsInfeeNcyAmt = 20;
int32 pdlsInvcAmt = 21;
string pdlsInvcCurrCd = 22;
int32 pdlsInvcFxrt = 23;
int32 pdlsInvcNcyAmt = 24;
int32 pdlsInvcUsdAmt = 25;
int32 pdlsMprcBaseVal = 26;
string pdlsMprcCurrCd = 27;
int32 pdlsMprcNcyAmt = 28;
string pdlsMprcTpCd = 29;
int32 pdlsMprcUsdAmt = 30;
int32 pdlsMprcUtAmt = 31;
string pdlsNo = 32;
int32 pdlsOtcstAmt = 33;
string pdlsOtcstCurrCd = 34;
int32 pdlsOtcstFxrt = 35;
int32 pdlsOtcstNcyAmt = 36;
int32 pdlsTxbsNcyAmt = 37;
int32 pdlsTxbsUsdAmt = 38;
int32 pdlsVlutNcyAmt = 39;
int32 pdlsVlutUsdAmt = 40;
string reffNo = 41;
string updatedAt = 42;
};
message ClreDedVlutPdlWhereUniqueInput {
string createdAt = 1;
string delYn = 2;
string frstRegstId = 3;
string frstRgsrDttm = 4;
string id = 5;
string lastChgDttm = 6;
string lastChprId = 7;
int32 mdfyDgcnt = 8;
int32 pdlsCachAmt = 9;
string pdlsCachCurrCd = 10;
int32 pdlsCachFxrt = 11;
int32 pdlsCachNcyAmt = 12;
int32 pdlsDdctAmt = 13;
string pdlsDdctCurrCd = 14;
int32 pdlsDdctFxrt = 15;
int32 pdlsDdctNcyAmt = 16;
int32 pdlsInfeeAmt = 17;
string pdlsInfeeCurrCd = 18;
int32 pdlsInfeeFxrt = 19;
int32 pdlsInfeeNcyAmt = 20;
int32 pdlsInvcAmt = 21;
string pdlsInvcCurrCd = 22;
int32 pdlsInvcFxrt = 23;
int32 pdlsInvcNcyAmt = 24;
int32 pdlsInvcUsdAmt = 25;
int32 pdlsMprcBaseVal = 26;
string pdlsMprcCurrCd = 27;
int32 pdlsMprcNcyAmt = 28;
string pdlsMprcTpCd = 29;
int32 pdlsMprcUsdAmt = 30;
int32 pdlsMprcUtAmt = 31;
string pdlsNo = 32;
int32 pdlsOtcstAmt = 33;
string pdlsOtcstCurrCd = 34;
int32 pdlsOtcstFxrt = 35;
int32 pdlsOtcstNcyAmt = 36;
int32 pdlsTxbsNcyAmt = 37;
int32 pdlsTxbsUsdAmt = 38;
int32 pdlsVlutNcyAmt = 39;
int32 pdlsVlutUsdAmt = 40;
string reffNo = 41;
string updatedAt = 42;
};
message ClreDedVlutPdlUpdateInput {
string createdAt = 1;
string delYn = 2;
string frstRegstId = 3;
string frstRgsrDttm = 4;
string id = 5;
string lastChgDttm = 6;
string lastChprId = 7;
int32 mdfyDgcnt = 8;
int32 pdlsCachAmt = 9;
string pdlsCachCurrCd = 10;
int32 pdlsCachFxrt = 11;
int32 pdlsCachNcyAmt = 12;
int32 pdlsDdctAmt = 13;
string pdlsDdctCurrCd = 14;
int32 pdlsDdctFxrt = 15;
int32 pdlsDdctNcyAmt = 16;
int32 pdlsInfeeAmt = 17;
string pdlsInfeeCurrCd = 18;
int32 pdlsInfeeFxrt = 19;
int32 pdlsInfeeNcyAmt = 20;
int32 pdlsInvcAmt = 21;
string pdlsInvcCurrCd = 22;
int32 pdlsInvcFxrt = 23;
int32 pdlsInvcNcyAmt = 24;
int32 pdlsInvcUsdAmt = 25;
int32 pdlsMprcBaseVal = 26;
string pdlsMprcCurrCd = 27;
int32 pdlsMprcNcyAmt = 28;
string pdlsMprcTpCd = 29;
int32 pdlsMprcUsdAmt = 30;
int32 pdlsMprcUtAmt = 31;
string pdlsNo = 32;
int32 pdlsOtcstAmt = 33;
string pdlsOtcstCurrCd = 34;
int32 pdlsOtcstFxrt = 35;
int32 pdlsOtcstNcyAmt = 36;
int32 pdlsTxbsNcyAmt = 37;
int32 pdlsTxbsUsdAmt = 38;
int32 pdlsVlutNcyAmt = 39;
int32 pdlsVlutUsdAmt = 40;
string reffNo = 41;
string updatedAt = 42;
};
message findManyParams {

};